--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <p>Em breve, publicarei aqui alguns dos meus projetos e trabalhos!</p>
 
     <h2>Contato</h2>
-    <p>Email: [seuemail@example.com]</p>
-    <p>LinkedIn: [link para seu perfil]</p>
+    <p>Email: godoy.henrique@aluno.ifsp.edu.br</p>
+    <p>LinkedIn: https://www.linkedin.com/in/henrique-martinelli-de-godoy-13b64b35b/</p>
 </section>
 
 <footer>
